--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="main.css">
+  <link rel="icon" type="image/png"href="/img/favicon.png">
 </head>
 <body>
-  <script src="main.js"></script>
+  <h1>Dom Loops</h1>
+  <!-- <script src="main.js"></script> -->
+  <script src="loops.js"></script>
 </body>
 </html>
