--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
   <h1>Dom Loops</h1>
+  <div id="dino-barn" class="dino-barn"></div>
+
   <!-- <script src="main.js"></script> -->
-  <script src="loops.js"></script>
+  <!-- <script src="loops.js"></script> -->
+  <script src="dom.js"></script>
 </body>
 </html>
